--- a/simplilearn-phase2/files/apache.conf.j2
+++ b/simplilearn-phase2/files/apache.conf.j2
@@ -1,3 +1,4 @@
+DocumentRoot /srv/www/wordpress
 <Directory /srv/www/wordpress>
     Options FollowSymLinks
     AllowOverride Limit Options FileInfo
